Closed Bug 1109389 Opened 10 years ago Closed 10 years ago

Assertions in MediaTaskQueue when shutting down EMEDecryptor in mochitest

Categories

(Core :: Audio/Video, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37
Tracking Status
firefox36 --- fixed
firefox37 --- fixed
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

When running mochitests dom/media/test/test_eme* I get assertion failures:

[4380] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file c:\Users\cpearce\src\mozilla\purple\dom\media\MediaTaskQueue.cpp, line 106
[4380] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file c:\Users\cpearce\src\mozilla\purple\dom\media\MediaTaskQueue.cpp, line 106

This is because the EME PDM creates a task queue which is shares with the EMEDecryptors that it creates. So if an EME PDM creates two EMEDecryptors (say one for the video and another for the audio streams...) when the first EMEDecryptor shutsdown, it will shutdown the task queue, and the second EMEDecryptor won't be able to use it to shutdown. The failure to use the task queue is why we see those assertion failures.
Have the constructor of EMEDecryptor create its own task queue.
Attachment #8534060 - Flags: review?(kinetik)
Attachment #8534060 - Flags: review?(kinetik) → review+
https://hg.mozilla.org/mozilla-central/rev/dfcd18d91159
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Comment on attachment 8534127 [details] [diff] [review]
Patch: Store GMP record name in record file on disk

Approval Request Comment
[Feature/regressing bug #]: MSE
[User impact if declined]: less consistent testing, sites more likely to serve flash video.
[Describe test coverage new/current, TBPL]: landed on m-c.
[Risks and why]: I've not been backporting EME-related changes, so this may end up requiring other related fixes. However, EME itself is still pref'd-off in Aurora, and this is an isolated change, so I'd say the risk is low.
[String/UUID change made/needed]: none.

The MSE-related patches in bug 1110534 depend on this change.
Attachment #8534127 - Flags: approval-mozilla-aurora?
Attachment #8534127 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Mass update firefox-status to track EME uplift.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: